# belly_rubb

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
app/: config.py  db.py  db_models.py  exceptions.py  pkce_flow.py
app/db_models/: __init__.py  access_token.py  customer.py  group.py  group_membership.py  order.py  payment.py  sync_state.py
app/templates/: callback.html  home.html
belly_rubb/: __init__.py  config.py  dataset.py  features.py  get_token.py  plots.py  utils.py
belly_rubb/config/: api_table_methods.json
belly_rubb/etl/: __init__.py  api_manager.py  customers.py  orders.py  payments.py  token_provider.py
belly_rubb/modeling/: predict.py  train.py
docs/: access_token_schema.sql  customer_schema.sql  group.sql  group_membership.sql  mkdocs.yml  payment_schema.sql  sync_state.sql
docs/docs/: 01_catalog_initial_exploration.md  01_orders_initial_exploration.md  database.md  getting-started.md  index.md  oauth-setup.md
notebooks/: 0.01-initial-exploration.ipynb  0.01-orders-initial-exploration.ipynb  0.02-catalog-initial-exploration.ipynb  1.01-orders.ipynb
references/: item_synonyms.json
reports/: item_counts.csv  item_variation_counts.csv
